new proj/src/objects/GE_PRM_Commercial_Vetting_Approval__c.object
<CustomObject>
    <fields>
        <fullName>GE_PRM_Approved_Date_del__c</fullName>
        <label>Approved/Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Approver1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To flag the manually selected Approval</description>
        <label>Approver1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commercial_Vetting_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Commercial_Vetting_Application__c</fullName>
        <label>Commercial Vetting Application</label>
        <referenceTo>GE_PRM_Commercial_Vetting__c</referenceTo>
        <relationshipLabel>Commercial Vetting Approvals</relationshipLabel>
        <relationshipName>Commercial_Vetting_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commercial_Vetting_Approvals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tollgate1_Cycle_time__c</fullName>
        <formula>GE_PRM_Commercial_Vetting_Application__r.GE_PRM_Approver1_Approved_Date__c   -  GE_PRM_Commercial_Vetting_Application__r.GE_PRM_Tollgate_Approvers_Generated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tollgate1 Cycle time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tollgate_2_Cycle_time__c</fullName>
        <formula>GE_PRM_Commercial_Vetting_Application__r.GE_PRM_Approver_2_Approved_Date__c - GE_PRM_Commercial_Vetting_Application__r.GE_PRM_Tollgate_Approvers_Generated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tollgate 2 Cycle time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tollgate_Cycle_time__c</fullName>
        <formula>GE_PRM_Approved_Date_del__c  - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tollgate Cycle time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Commercial Vetting Approval</label>
    <nameField>
        <displayFormat>CVA-{0000}</displayFormat>
        <label>Commercial Vetting Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Vetting Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>